--- a/Sandbox/Sandbox/Views/Home/Bump.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bump.cshtml
@@ -9,10 +9,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">BUMP, BULGE, BOILING OVER, CRACK, ROACH STUDY</span></p>
-                                <h2 class="black add-top-quarter"><span>RESIN PUSHING METAL</span></h2>
-                                <h5 class="font3 black">2006 - 2009</h5>
-                                <h3 class="font5 color">RESIN AND METAL</h3>
+                                <p><span>BUMP, BULGE, BOILING OVER, CRACK, ROACH STUDY</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>RESIN PUSHING METAL</span></h1>
+                                <h5 class="font2 black">2006 - 2009</h5>
+                                <h4 class="font1 color">RESIN AND METAL</h4>
                             </div>
                         </div>
                     </article>
