--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -99,8 +99,8 @@
             <article class="col-md-6 about-content-split text-center common-pad softwhite-bg">
                 <div class="valign">
                     <img class="img-responsive" src="~/images/about/profile-02.jpg" />
-                    <h1 class="color font5 promo-caps">NATALIE MACELLAIO</h1><h2 class="color"></h2>
-
+                    <h1 class="font1 color promo-caps">NATALIE MACELLAIO</h1>
+                    
                 </div>
             </article>
             <article class="col-md-6 about-content-split text-left common-pad white-bg">
@@ -121,14 +121,14 @@
                     expression that allows me to create intimate pieces that explore the relationships I have
                     to my children.”
                 </p>
-                <p>Many years ago, I became interested in the relationship and similarities between humans and the things that humans perceive as being infectious.  Influenced by a nasty roach infestation in an ill-advised apartment choice, I was first horrified, then fascinated by the resilience of these creatures.  It occurred to me that these creatures share a tenacity for survival and structure.  This influenced a body of work that has remained at the core of my practice.
+           <!--     <p>Many years ago, I became interested in the relationship and similarities between humans and the things that humans perceive as being infectious.  Influenced by a nasty roach infestation in an ill-advised apartment choice, I was first horrified, then fascinated by the resilience of these creatures.  It occurred to me that these creatures share a tenacity for survival and structure.  This influenced a body of work that has remained at the core of my practice.
                     Extrapolating human culture on a macro scale, it seemed to me that absent of human emotions and inflection, our own culture exists as a sort of infestation.  Over a long enough time span, our building, tearing down, and rebuilding creates a history...a carcass that can be just as interesting as the culture behind it...as is the case with roaches.  So, in this vein, I decided to look deeper into this history.
                     With that, it seemed that the only real individuality was in the flaws.  Cracks...the most basic of flaws, have their own depth, length and integrity.  At the heart of it, the cracks are all that is unique.  Cracks show age.  They can hint at stress points and loose narratives.  They can give clues to lapses in craftsmanship and structural integrity.  They, in essence, are the story.
                 </p>
                 <p>I have chosen to work with precious metals because of their innate strengths and weaknesses.  I value silver, both for its culturally relevant quality, and for its beauty.  I employ copper for its strength and abundance.  I am, after all, interested in creating something beautiful and desirable.  I have meticulously created “flaws” in these materials.  I use the perception of beauty and strength to juxtapose these “flaws” and make them more apparent and salient.
                 </p>
                 <p>While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
-                </p>
+                </p>-->
 
                 <h3 class="sub-heading font2 black add-top-half">Profiles</h3>
                 <ul class="profile-list">
@@ -140,23 +140,23 @@
             </article>
         </div>
 
-        <!--     <div class="row">
+          <div class="row">
              <article class="col-md-4 white-bg stats-block text-center">
-                 <img alt="" title="" src="images/icons/1.png" />
-                 <h1 class="stats-count font1 black">203</h1>
-                 <h3 class="sub-heading font2 dark">Clients</h3>
+                 <img class="color" alt="" title="" src="images/icons/3.png" />
+                 <h5 class="font2 black">Jewelry - concrete, silver, weaving</h5>
+                 <h3 class="sub-heading font1 color">Trestle Design</h3>
              </article>
              <article class="col-md-4 color-bg stats-block text-center">
-                 <img alt="" title="" src="images/icons/2.png" />
-                 <h1 class="stats-count font1 black">1K+</h1>
-                 <h3 class="sub-heading font2 dark">Projects</h3>
+                 <img class="color" alt="" title="" src="images/icons/2.png" />
+                 <h5 class="font2 black">social network for atists<br /> who are mothers</h5>
+                 <h3 class="sub-heading font1 color">The Mother Load Project</h3>
              </article>
              <article class="col-md-4 softwhite-bg stats-block text-center">
-                 <img alt="" title="" src="images/icons/3.png" />
-                 <h1 class="stats-count font1 black">374</h1>
-                 <h3 class="sub-heading font2 dark">Apps</h3>
+                 <img class="color" alt="" title="" src="images/icons/1.png" />
+                 <h5 class="font2 black">artist</h5>
+                 <h3 class="sub-heading font1 color">Links</h3>
              </article>
-         </div> -->
+         </div> 
 
     </div>
 </section>
@@ -200,7 +200,7 @@
 
             <article class="col-md-6 contact-content-split fullheight text-center common-pad white-bg">
                 <div class="valign">
-                    <h1 class="black font5 promo-caps">Natalie Macellaio</h1>
+                    <h1 class="font1 color"><span>Natalie Macellaio</span></h1>
                     <h3><span class="color-bg black"><a href="#">nataliemacellaio.artist@gmail.com</a></span></h3>
                     <!-- social icons-->
                     <ul class="social-wrap">
