--- a/Sandbox/Sandbox/Views/Home/KidsRings.cshtml
+++ b/Sandbox/Sandbox/Views/Home/KidsRings.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
-    ViewBag.Title = "Natalie Macellaio | Kids Rings";
+    ViewBag.Title = "Natalie Macellaio | Interactive Rings";
 }
 
 <section class="page-section" id="kidsrings">
@@ -11,10 +11,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">new work</span></p>
-                                <h2 class="black add-top-quarter"><span>interactive rings</span></h2>
-                                <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">stering silver and mixed media</h4>
+                                <p><span>new work</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>interactive rings</span></h1>
+                                <h5 class="font2 black">2014</h5>
+                                <h4 class="font1 color">stering silver and mixed media</h4>
                             </div>
                         </div>
                     </article>
@@ -29,13 +29,13 @@
                 </div>
                 <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                        <img alt="Natalie Macellaio - Milo's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Milo's Ring</h3>
                         </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" class="img-responsive" src="images/kidsrings/kring-02.jpg" />
+                        <img alt="Natalie Macellaio - Milo's Ring Detail" class="img-responsive" src="images/kidsrings/kring-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Milo's Ring, Detail</h3>
                         </div>
@@ -43,13 +43,13 @@
                 </div>
                 <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" class="img-responsive" src="images/kidsrings/kring-03.jpg" />
+                        <img alt="Natalie Macellaio - Fina's Ring" class="img-responsive" src="images/kidsrings/kring-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Fina's Ring</h3>
                         </div>
                      </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" class="img-responsive" src="images/kidsrings/kring-04.jpg" />
+                        <img alt="Natalie Macellaio - Fina's Ring Detail" class="img-responsive" src="images/kidsrings/kring-04.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Fina's Ring, Detail</h3>
                         </div>
