--- a/Sandbox/Sandbox/Views/Home/PiercingPieces.cshtml
+++ b/Sandbox/Sandbox/Views/Home/PiercingPieces.cshtml
@@ -11,10 +11,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Wall installation</span></p>
-                                <h2 class="black add-top-quarter"><span>a memory</span></h2>
-                                <h5 class="font3 black">2010</h5>
-                                <h3 class="font5 dark">pierced nickel and silver</h3>
+                                <p><span>Wall installation</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>a memory</span></h1>
+                                <h5 class="font1 black">2010</h5>
+                                <h4 class="font5 color">pierced nickel and silver</h4>
                             </div>
                         </div>
                     </article>
