--- a/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
+++ b/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
@@ -11,11 +11,11 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Resin</span></p>
-                                <h2 class="black add-top-quarter"><span>B.S., RED DOT, SWARM</span></h2>
-                                <h5 class="font3 black">2005 - 2009</h5>
-                                <h4 class="font5 dark">RESIN AND METAL</h4>
-                            </div>
+                                <p><span>Resin</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>B.S. - RED DOT - SWARM</span></h1>
+                                <h5 class="font2 black">2005 - 2009</h5>
+                                <h4 class="font1 color">RESIN AND METAL</h4>
+</div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
