--- a/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
@@ -11,10 +11,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">new work</span></p>
-                                <h2 class="black add-top-quarter"><span>Scribbles Collection</span></h2>
-                                <h5 class="font3 black">2014 - 2015</h5>
-                                <h3 class="font5 color">annodized alunimum and sterling silver</h3>
+                                <p><span>new work</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>Scribbles Collection</span></h1>
+                                <h5 class="font2 black">2014 - 2015</h5>
+                                <h4 class="font1 color">annodized alunimum and sterling silver</h4>
                             </div>
                         </div>
                     </article>
