--- a/Sandbox/Sandbox/Views/Home/Shifting.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Shifting.cshtml
@@ -11,10 +11,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Shifting Exhibition</span></p>
-                                <h2 class="color font1 add-top-quarter"><span>Shifting</span></h2>
-                                <h5 class="font3 black">2010</h5>
-                                <h3 class="font5 color">STERLING SILVER, NICKEL SILVER,  MIXED MEDIA</h3>
+                                <p><span>Shifting Exhibition</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>Shifting</span></h1>
+                                <h5 class="font2 black">2010</h5>
+                                <h4 class="font1 color">STERLING SILVER, NICKEL SILVER,  MIXED MEDIA</h4>
                             </div>
                         </div>
                     </article>
