--- a/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
+++ b/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
@@ -11,10 +11,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black small">a network of professional artists, who are also mothers</span> </p>
-                                        <h2 class="black add-top-quarter "><span>The Mother Load Project</span></h2>
-                                        <h5 class="font3 black"><a href="http://www.themotherload.org/" target="_blank">www.themotherload.org</a></h5>
-                                        <h4 class="font5 dark">Founded by artists and mothers <br /> Lesli Robertson and Natalie Macellaio</h4>
+                                <p><span>a network of professional artists<br /> who are also mothers</span> </p>
+                                <h1 class="font1 color add-top-quarter"><span>The Mother Load Project</span></h1>
+                                <h5 class="font2 black"><a href="http://www.themotherload.org/" target="_blank">www.themotherload.org</a></h5>
+                                <h4 class="font1 color">Founded by artists and mothers <br /> Lesli Robertson and Natalie Macellaio</h4>
                             </div>
                         </div>
                     </article>
