--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -617,18 +617,20 @@ h1,h2,h3,h4,h5,h6{
 .showcase-single-item-wrap{
 	padding: 20px;
 }
- .showcase-single-item h1{ 
+ .showcase-single-item h2{ 
  	font-size: 24px;
  	line-height: 31px;
  	margin-top: 20px;
         }
- .showcase-single-item h2{ 
+ .showcase-single-item h1{ 
  	font-size: 36px;
  	line-height: 43px;
+     margin-top: 10px;
      color:#61559F;
      font-weight:200; 
         }
- .showcase-single-item h2 > span{ 
+ .showcase-single-item h2 > span,
+ .showcase-single-item h1 > span{ 
  	text-transform: uppercase;
  	font-weight: 500;
      letter-spacing: 4px;
@@ -654,11 +656,11 @@ h1,h2,h3,h4,h5,h6{
 .showcase-single-content h5{
 	font-weight: 600;
 	font-size: 16px;
-	line-height: 23px;
-	margin-top: 30px;
+	line-height: 25px;
+	margin-top: 10px;
 	margin-bottom: 0;
 	border-top: solid 5px;
-	padding-top: 30px;
+	padding-top: 0;
     color:gray;
 }
 .showcase-single-content h4{
@@ -674,7 +676,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .showcase-single-item-inner h4 {
      text-transform: uppercase;
-         letter-spacing: 4px;
+         letter-spacing: 2px;
          font-size: 16px;
 }
 .showcase-single-item-inner h3 {
