--- a/Sandbox/Sandbox/Views/Home/Occupancy.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Occupancy.cshtml
@@ -10,10 +10,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black">Occupancy and Combat</span></p>
-                                <h2 class="black add-top-quarter"><span>OCCUPANCY INSTALLATION</span></h2>
-                                <h5 class="font3 black">2009</h5>
-                                <h4 class="font5 dark">PLASTIC, CLAY, SILVER, GOLD</h4>
+                                <p><span>Occupancy and Combat</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>OCCUPANCY INSTALLATION</span></h1>
+                                <h5 class="font2 black">2009</h5>
+                                <h4 class="font1 color">PLASTIC, CLAY, SILVER, GOLD</h4>
                             </div>
                         </div>
                     </article>
