--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -78,11 +78,20 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
-                    <img alt="resin brood on post" class="img-responsive" src="~/images/cracks/cracks-01.jpg" />
+                    <img alt="shifting metal" class="img-responsive" src="~/images/cracks/cracks-01.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Shifting">
                         <div class="works-item-inner valign">
                             <h3 class="black">shifting</h3>
                             <p class="white"><span class="black-bg">SHIFTING EXHIBIT</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="evolve" class="img-responsive" src="~/images/combat/combat-04.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Combat">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">COMBAT</h3>
+                            <p class="white"><span class="black-bg">EVERY CITE - EVOLVE</span></p>
                         </div>
                     </a>
                 </div>
@@ -97,9 +106,9 @@
     <div class="container">
         <div class="row">
             <article class="col-md-6 about-content-split text-center common-pad softwhite-bg">
-                <div class="valign">
+                <div class="valign nat-name">
                     <img class="img-responsive" src="~/images/about/nm-profile.jpg" />
-                    <h1 class="font1 color promo-caps">NATALIE MACELLAIO</h1>
+                    <h1 class="font1 color promo-caps"><span>NATALIE MACELLAIO</span></h1>
                     
                 </div>
             </article>
@@ -130,12 +139,15 @@
                 <p>While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
                 </p>-->
 
-                <h3 class="sub-heading font2 black add-top-half">Profiles</h3>
-                <ul class="profile-list">
+                <h3 class="sub-heading font2 black add-top-half">Biography and Curriculum Vita (C.V.)</h3>
+                <ul class="profile-list h4">
                     <li>
-                        <a href="#">Download Biography and Exhibits</a>
+                        <a href="~/images/about/Natalie Macellaio CV  5-15.pdf" target="_blank">View - Biography and Exhibits</a>
                     </li>
-
+                    <li>
+                        <a href="~/images/about/Natalie Macellaio CV  5-15.pdf"
+                           download="Natalie Macellaio Biography and CV">Download - Biography and Exhibits</a>
+                    </li>
                 </ul>
             </article>
         </div>
