added more Combat

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
                     <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Combat">
                         <div class="works-item-inner valign">
                             <h3 class="black">COMBAT</h3>
-                            <p class="white"><span class="black-bg">EVERY CITE - EVOLVE</span></p>
+                            <p class="white"><span class="black-bg">EVERY CITY - EVOLVE - APT710 - WALKING LIGHT</span></p>
                         </div>
                     </a>
                 </div>
