--- a/Sandbox/Sandbox/Views/Home/Combat.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Combat.cshtml
@@ -11,9 +11,9 @@
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <p><span>COMBAT</span></p>
-                                <h1 class="font1 color add-top-quarter"><span>EVERYCITYHASASOUTHSIDE - EVOLVE - FETISH</span></h1>
+                                <h1 class="font1 color add-top-quarter"><span>EVERYCITYHASASOUTHSIDE - EVOLVE - APT710 - WALKING LIGHT - FETISH</span></h1>
                                 <h5 class="font2 black">2009</h5>
-                                <h4 class="font1 color">CLAY, POWDER COATING</h4>
+                                <h4 class="font1 color">CLAY, POWDER COATING, SILVER</h4>
                             </div>
                         </div>
                     </article>
@@ -66,10 +66,71 @@
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Evolve Top</h3>
                         </div>
-                    </article>
-                    
+                    </article>      
                 </div>
                 <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - APT710 - detail3" class="img-responsive" src="images/combat/apt710-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">APT710 - detail3</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - APT710 - detail5" class="img-responsive" src="images/combat/apt710-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">APT710 - detail5</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - APT710 - detail roach" class="img-responsive" src="images/combat/apt710-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">APT710 - detail roach</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - APT710 - detail 4" class="img-responsive" src="images/combat/apt710-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">APT710 - detail 4</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - APT710 - detail 6" class="img-responsive" src="images/combat/apt710-05.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">APT710 - detail 6</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Walking Light" class="img-responsive" src="images/combat/walklight-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Walking Light</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Walking Light detail" class="img-responsive" src="images/combat/walklight-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Walking Light detail</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Walking Light detail 2" class="img-responsive" src="images/combat/walklight-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Walking Light detail 2</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Walking Light detail 3" class="img-responsive" src="images/combat/walklight-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Walking Light detail 3</h3>
+                        </div>
+                    </article>
                     <article class="col-md-6">
                         <img alt="Natalie Macellaio - Fetish" class="img-responsive" src="images/combat/combat-07.jpg" />
                         <div class="showcase-thumb-strip-inner">
