--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
-                    <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
+                    <img alt="Collaborations" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
                         <div class="works-item-inner valign">
                             <h3 class="black">Collaborations</h3>
@@ -52,7 +52,7 @@
                 </div>              
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Resin and Metal - Resin balls" class="img-responsive" src="~/images/resinballs/resinballs-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" title="Resin Balls" href="~/Resin-Balls">
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Resin-Balls">
                         <div class="works-item-inner valign">
                             <h3 class="black">Resin and Metal</h3>
                             <p class="white"><span class="black-bg">B.S., RED DOT, SWARM</span></p>
@@ -95,7 +95,42 @@
                         </div>
                     </a>
                 </div>
-
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Collaborations" class="img-responsive" src="~/images/wannabe/wannabe-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#wannabe" href="~/Wannabe">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Collaborations</h3>
+                            <p class="white"><span class="black-bg">WANNABE</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Collaborations" class="img-responsive" src="~/images/petite/petite-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#petite" href="~/Petite-Show">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Collaborations</h3>
+                            <p class="white"><span class="black-bg">petite show</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Collaborations" class="img-responsive" src="~/images/merger/merger-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#merger" href="~/Merger">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Collaborations</h3>
+                            <p class="white"><span class="black-bg">THE MERGER</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Collaborations" class="img-responsive" src="~/images/trestle/trestle-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#trestle" href="~/Trestle">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Collaborations</h3>
+                            <p class="white"><span class="black-bg">TRESTLE DESIGNS</span></p>
+                        </div>
+                    </a>
+                </div>
 
             </div>
         </div>
@@ -154,14 +189,16 @@
 
           <div class="row">
              <article class="col-md-4 white-bg stats-block text-center">
-                 <img class="color" alt="" title="" src="images/icons/3.png" />
+                 <img alt="Trestle Designs jewelry business card" src="~/images/trestle/trestle_bzcrd30front.png" />
                  <h5 class="font2 black">Jewelry - concrete, silver, weaving</h5>
-                 <h3 class="sub-heading font1 color">Trestle Design</h3>
+                 <h3 class="sub-heading font1 color">Trestle Designs</h3>
              </article>
              <article class="col-md-4 color-bg stats-block text-center">
-                 <img class="color" alt="" title="" src="images/icons/2.png" />
-                 <h5 class="font2 black">social network for atists<br /> who are mothers</h5>
-                 <h3 class="sub-heading font1 color">The Mother Load Project</h3>
+                 <a href="http://themotherload.org/">
+                     <img alt="The Motherload Project - logo" class="img-responsive" src="~/images/motherload/motherload-logo.jpg" />
+                     <h5 class="font2 black">social network for atists<br /> who are mothers</h5>
+                     <h3 class="sub-heading font1 color">The Mother Load Project</h3>
+                 </a>
              </article>
              <article class="col-md-4 softwhite-bg stats-block text-center">
                  <img class="color" alt="" title="" src="images/icons/1.png" />
