--- a/Sandbox/Sandbox/Views/Home/Wannabe.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Wannabe.cshtml
@@ -1,8 +1,8 @@
 ﻿@{  Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
-    ViewBag.Title = "Natalie Macellaio | The Motherload Project";
+    ViewBag.Title = "Natalie Macellaio | Wannabe";
 }
  
-<section class="page-section" id="motherload">
+<section class="page-section" id="wannabe">
      <div class="container">
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
@@ -10,17 +10,17 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p><span>a network of professional artists<br /> who are also mothers</span> </p>
-                                <h1 class="font1 color add-top-quarter"><span>The Mother Load Project</span></h1>
-                                <h5 class="font2 black"><a href="http://www.themotherload.org/" target="_blank">www.themotherload.org</a></h5>
-                                <h4 class="font1 color">Co-created by artists and mothers <br /> Lesli Robertson and Natalie Macellaio</h4>
+                                <p><span>a collaboration with Matt Clark</span></p>
+                                <h1 class="font1 color add-top-quarter"><span>wannabe</span></h1>
+                                <h5 class="font2 black">2008</h5>
+                                <h4 class="font1 color">500X GALLERY, DALLAS, TX</h4>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">About The Motherload</h3>
+                                <h3 class="sub-heading">About Wannabee</h3>
                                 <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
                             </div>
                         </div>
@@ -28,26 +28,23 @@
                 </div>
                 <div class="row">
                     <div class="single-project-slider-wrap">
-                        <!-- single-project-slider : starts -->
                         <ul class="single-project-slider bxslider">
                             <li>
-                                <img alt="DMA Exhibit - Motherload 1" title="" src="images/motherload/motherload-01.jpg" />
+                                <img alt="Wannabe 1" src="images/wannabe/wannabe-01.jpg" />
                             </li>
                             <li>
-                                <img alt="DMA Exhibit - Motherload 2" title="" src="images/motherload/motherload-02.jpg" />
+                                <img alt="Wannabe 2" src="images/wannabe/wannabe-02.jpg" />
                             </li>
                             <li>
-                                <img alt="DMA Exhibit - Motherload 3" title="" src="images/motherload/motherload-03.jpg" />
+                                <img alt="Wannabe 3" src="images/wannabe/wannabe-03.jpg" />
                             </li>
                             <li>
-                                <img alt="DMA Exhibit - Motherload 4" title="" src="images/motherload/motherload-04.jpg" />
-                           </li>
+                                <img alt="Wannabe 4" src="images/wannabe/wannabe-04.jpg" />
+                            </li>
                             <li>
-                                <img alt="DMA Exhibit - Motherload 5" title="" src="images/motherload/motherload-05.jpg" />
-
+                                <img alt="Wannabe 5" src="images/wannabe/wannabe-05.jpg" />
                             </li>
                         </ul>
-                        <!-- single-project-slider : ends -->
                     </div>
                 </div>
             </article>
