added nav links

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                     <img alt="Resin Pushing Metal" class="img-responsive" src="~/images/crack/crack-01.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Bump">
                         <div class="works-item-inner valign">
-                            <h3 class="black">Resin PUshing Metal</h3>
+                            <h3 class="black">Resin Pushing Metal</h3>
                             <p class="white"><span class="black-bg">BUMP - BULGE - BOILING OVER - ROACH STUDY</span></p>
                         </div>
                     </a>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Collaborations" class="img-responsive" src="~/images/merger/merger-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#merger" href="~/Merger">
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#merger" href="~/The-Merger">
                         <div class="works-item-inner valign">
                             <h3 class="black">Collaborations</h3>
                             <p class="white"><span class="black-bg">THE MERGER</span></p>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Collaborations" class="img-responsive" src="~/images/trestle/trestle-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#trestle" href="~/Trestle">
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#trestle" href="~/Trestle-Designs">
                         <div class="works-item-inner valign">
                             <h3 class="black">Collaborations</h3>
                             <p class="white"><span class="black-bg">TRESTLE DESIGNS</span></p>
