--- a/Sandbox/Sandbox/Views/Home/TrestleDesigns.cshtml
+++ b/Sandbox/Sandbox/Views/Home/TrestleDesigns.cshtml
@@ -2,7 +2,7 @@
   ViewBag.Title = "Natalie Macellaio | Trestle Designs";
 }
 
-<section class="page-section" id="petite">
+<section class="page-section" id="trestle">
     <div class="container">
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
