--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -68,16 +68,17 @@
                                 <a href="~/Bump">RESIN PUSHING METAL</a>                               
                                 <a href="~/Cracks">SHIFTING</a>
                                 <a href="~/Occupancy">OCCUPANCY</a>
+                                <a href="~/Combat">COMBAT</a>
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
                             <a class="main-nav-link" href="#">collaborations</a>
                             <div class="sub-nav">
                                 <a href="~/The-Mother-Load-Project">THE MOTHER LOAD PROJECT</a>
-                                <a href="#wannabe">WANNABEE</a>
-                                <a href="#petite">PETITE SHOW</a>
-                                <a href="#merger">THE MERGER</a>
-                                <a href="#trestle">TRESTLE DESIGNS</a>
+                                <a href="~/Wannabe">WANNABEE</a>
+                                <a href="~/Petite-Show">PETITE SHOW</a>
+                                <a href="~/The-Merger">THE MERGER</a>
+                                <a href="~/Trestle-Designs">TRESTLE DESIGNS</a>
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
@@ -107,17 +108,18 @@
                         <li><a class="font2 black ease" href="~/Resin-Balls">RESIN</a></li>
                         <li><a class="font2 black ease" href="~/Bump">RESIN PUSHING METAL</a></li>
                         <li><a class="font2 black ease" href="~/Cracks">SHIFTING</a></li>
-                        <li><a class="font2 black ease" href="~/Occupancy">OCCUPANCY</a></li>                        
+                        <li><a class="font2 black ease" href="~/Occupancy">OCCUPANCY</a></li>
+                        <li><a class="font2 black ease" href="~/Combat">COMBAT</a></li>                        
                      </ul>
                 </li>
                 <li>
                     <a class="sub-collapser" href="">collaborations</a>
                     <ul>
                         <li><a class="font2 black ease" href="~/The-Mother-Load-Project">THE MOTHER LOAD PROJECT</a></li>
-                        <li><a class="font2 black ease" href="#wannabe">WANNABEE</a></li>
-                        <li><a class="font2 black ease" href="#petite">PETITE SHOW</a></li>
-                        <li><a class="font2 black ease" href="#merger">THE MERGER</a></li>
-                        <li><a class="font2 black ease" href="#trestle">TRESTLE DESIGNS</a></li>
+                        <li><a class="font2 black ease" href="~/Wannabe">WANNABEE</a></li>
+                        <li><a class="font2 black ease" href="~/Petite-Show"</a></li>
+                        <li><a class="font2 black ease" href="~/The-Merger">THE MERGER</a></li>
+                        <li><a class="font2 black ease" href="~/Trestle-Designs">TRESTLE DESIGNS</a></li>
                     </ul>
                 </li>
                 <li>
