added prev button

--- a/Sandbox/Sandbox/Views/Home/TheMerger.cshtml
+++ b/Sandbox/Sandbox/Views/Home/TheMerger.cshtml
@@ -5,7 +5,7 @@
 <section class="page-section" id="merger">
     <div class="container">
         <div class="main-logo-wrap last-page">
-        <a href="~/Index/#home"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
+        <a href="~/home"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
     </div>
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
