--- a/Sandbox/Sandbox/Views/Home/Wannabe.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Wannabe.cshtml
@@ -4,6 +4,9 @@
  
 <section class="page-section" id="wannabe">
      <div class="container">
+         <div class="main-logo-wrap last-page">
+             <a href="~/home"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
+         </div>
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
                 <div class="row">
